--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <!-- Supports all languages/symbols -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Responsive design -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Better compatibility for older browsers -->
+    <title>My Website</title>
+
+    <!-- Link to CSS -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <!-- Header -->
+      <header>
+        <nav>
+          <h1 class="logo">MySite</h1>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#blog">Blog</a></li>
+          </ul>
+          <button>Login</button>
+          <button>Sign Up</button>
+        </nav>
+      </header>
+
+      <!-- Main Content -->
+      <main>
+        <section id="home"></section>
+      </main>
+
+      <!-- Footer -->
+      <footer>
+        <p>&copy; 2025 My Website. All rights reserved.</p>
+      </footer>
+    </div>
+    <!-- JavaScript -->
+    <script src="script.js"></script>
+  </body>
 </html>
