--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <!-- Header -->
-      <header>
+      <header class="header-main">
         <nav>
           <h1 class="logo">MySite</h1>
           <ul>
