--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
             <li><a href="#contact">Contact</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#blog">Blog</a></li>
+            
           </ul>
-          <button>Login</button>
-          <button>Sign Up</button>
+          <button class="header-btn">Login</button>
+          <button class="header-btn">Sign Up</button>
         </nav>
       </header>
 
